--- a/trunk/ressourcen/jd/languages/Nederlands.lng
+++ b/trunk/ressourcen/jd/languages/Nederlands.lng
@@ -79,6 +79,10 @@ convert.dialog.chooseformat = selecteer het dataformaat:
 convert.dialog.keepformat = Gebruik dit formaat voor deze sessie
 convert.progress.convertingto = Converteren naar
 convert.progress.unknownintype = Onbekend Formaat
+decrypter.invalidaccount = Geen geldig account gevonden
+decrypter.unknownerror = Onbekende Fout
+decrypter.wrongcaptcha = Foutieve Captcha Code
+decrypter.wrongpassword = Foutief Paswoord
 download.chunks.connection = Verbinding
 download.chunks.label = Verbindingen
 download.connection.idle = Inactief
@@ -124,6 +128,7 @@ downloadlink.status.error_def = Foutmelding
 downloadlink.status.error_unexpected = Overwachte Fout
 downloadlink.status.incomplete = onvolledig
 downloadlink.status.todo = nog te doen
+downloadlink.status.waitinguserio = Wachten op gebruikers ingave
 downloadstatus.premiumload = Premiumdownload
 errors.interbalhostererror = Foutmelding Interne Host
 gui.accountcheck.pluginerror = Plugin %s is mogelijk defect. Informeer support!
@@ -148,6 +153,7 @@ gui.config.addons.install.tab = Installatie & updates
 gui.config.addons.name = Netwerk/Download
 gui.config.addons.settings.tab = Instellingen
 gui.config.btn_cancel = Annuleren
+gui.config.btn_fengshui = Compact Overzicht
 gui.config.btn_restart = Opslaan en opnieuw starten
 gui.config.btn_save = Opslaan
 gui.config.captcha.autotrain = Autotraining
@@ -231,6 +237,7 @@ gui.config.eventmanager.trigger = Aktie
 gui.config.eventmanager.trigger.btn = Trigger veranderen
 gui.config.fengshui.expertview = Geavanceerde Configutatie
 gui.config.fengshui.fritzbox.title = Fritz!Box herkent
+gui.config.fengshui.fritzbox.upnp.checkbox = Bericht niet meer tonen
 gui.config.fengshui.fritzbox.upnpactive = U heeft geen Fritz!Box
 gui.config.fengshui.fritzbox.upnpinactive = Gelieve Upnp activeren voor uw Fritz!Box <br><a href=\"http://%s\">naar Fritz!Box</a><br><a href=\"http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp\">Wikiartikel: Fritz!Box Upnp</a>
 gui.config.fengshui.password = Paswoord:
@@ -507,6 +514,7 @@ gui.downloadlink.status.wait = %s min wachten
 gui.downloadlist.delete = Geselecteerde Links werkelijk verwijderen?
 gui.downloadlist.delete_downloadlinks = Verwijder afgesloten Downloads?
 gui.downloadlist.delete_packages = Verwijder afgesloten Pakket?
+gui.downloadlist.reset = Reset geselecteerde Downloads?
 gui.downloadlist.tooltip.connections = Akt. Verbindingen:
 gui.downloadlist.tooltip.partnum = Deel:
 gui.downloadlist.tooltip.partsactive = Momenteel aktief:
@@ -580,6 +588,7 @@ gui.linkgrabber.menu.selection.premiummirror = Premium Mirrorkeuze
 gui.linkgrabber.menu.selection.priority = Voorkeur
 gui.linkgrabber.menu.selection.prioritymirror = Voorkeur Mirrorkeuze
 gui.linkgrabber.packageName = Pakketnaam:
+gui.linkgrabber.packagetab.chb.extractAfterdownload = Uitpakken
 gui.linkgrabber.packagetab.lbl.comment = Commentaar
 gui.linkgrabber.packagetab.lbl.name = Pakketnaam
 gui.linkgrabber.packagetab.lbl.password = Archief paswoord
@@ -611,6 +620,7 @@ gui.linkgrabber.text = Hier kun je alles samenvoegen tot één pakket en pas lat
 gui.linkgrabber.title = Linkverzamelaar
 gui.linkgrabber.title_1 = Link(s)
 gui.linkgrabber.title_2 = Pakket(ten)
+gui.linkgrabber.waitinguserio = Wachten op gebruikers ingave
 gui.linkgrabber.writeInfoFile = Schrijf een Infobestand voor dit pakket
 gui.linkInfo.Available = Beschikbaar
 gui.linkInfo.available = Beschikbaar
@@ -646,6 +656,7 @@ gui.linkInfo.Password = Paswoord
 gui.linkInfo.password = Paswoord
 gui.linkInfo.Passwort = Paswoord
 gui.linkInfo.Plugin Status = Plugin Status
+gui.linkinfo.rate = Refreshrate
 gui.linkInfo.Save to = Opslaan in
 gui.linkinfo.saveto = Opslaan als
 gui.linkInfo.saveTo = Opslaan in
@@ -739,6 +750,7 @@ gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Ondersteuning
 gui.menu.action.install.accel = CTRL+I
 gui.menu.action.install.desc = Add-on (*.jdu) installeren
+gui.menu.action.install.filefilter = JD Add-ons
 gui.menu.action.install.mnem = I
 gui.menu.action.install.name = Add-on installeren
 gui.menu.action.load.accel = CTRL+O
@@ -827,6 +839,7 @@ gui.packageinfo.loaded = Geladen
 gui.packageinfo.name = Naam
 gui.packageinfo.packagesize = Pakketgrootte
 gui.packageinfo.password = Paswoord
+gui.packageinfo.rate = Refreshrate
 gui.packageinfo.title = Pakket Informatie:
 gui.plugins.decrypt.wiireloaded.calcresult = Rekenresultaat
 gui.reconnect.confirm = Wilt U uw verbinding herstellen?
@@ -874,8 +887,10 @@ gui.table.contextmenu.editdownloadDir = Doelmap veranderen
 gui.table.contextmenu.editpackagename = Pakketnaam veranderen
 gui.table.contextmenu.enable = activeren
 gui.table.contextmenu.enablepackage = activeren
+gui.table.contextmenu.extrassubmenu = Extras
 gui.table.contextmenu.info = Details
 gui.table.contextmenu.newpackage = In nieuw Pakket verplaatsen
+gui.table.contextmenu.package.extrasSubmenu = Extras
 gui.table.contextmenu.packagedownloadDir = Doelmap openen
 gui.table.contextmenu.packageinfo = Details
 gui.table.contextmenu.packagesort = Pakket sorteren
@@ -1136,6 +1151,7 @@ main.start.logwarning.body = OPGELET. Uw Loglevel staat op %s en uw logschrijver
 main.start.logwarning.title = Log waarschuwing
 main.status.active = aan
 main.status.inactive = uit
+main.twitter.url = http://twitter.com/statuses/user_timeline/jdownloader.xml
 main.urls.faq = http://jdownloader.ath.cx/faq.php?lng=deutsch
 modules.container.dlc.containerinfo = <div style="width:450px;font-family:Geneva, Arial, Helvetica, sans-serif; font-size: 9px;"><font color="#0066FF"><strong>DLContainer succesvol geladen.</strong></font><br/><hr/><table style="width:450px"><tr><td>Gemaakt van </td><td>%s</td></tr><tr><td>Gemaakt met </td><td>%s</td></tr><tr><td>Pakketten </td><td>%s</td></tr><tr><td>Categorie </td><td>%s</td></tr><tr ><td colspan="2">%s</td></tr></table></div>
 modules.container.dlc.loadedmessage = DownloadLinkContainer geladen
@@ -1168,6 +1184,7 @@ plugins.container.dlc.extendedInfos = Vraag naar uitgebreide Informatie bij het 
 plugins.container.dlc.showdialogoncreatedlc = Toon bevestiging na het aanmaken
 plugins.container.dlc.uploaderName = Inclusief naam Uploader
 plugins.container.exit = Afgesloten. %s Links gevonden
+plugins.container.exit.error = Pakket-Fout: %s
 plugins.container.found = Verwerking %s Links
 plugins.container.open = Container Openen
 plugins.decrypt.cryptitcom.password = Map is met paswoord beveiligd. Paswoord ingeven:
@@ -1202,6 +1219,9 @@ plugins.errors.error = Fout:
 plugins.errors.pluginerror = Plugin Fout. Informeer Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grens bereikt
 plugins.errors.wrongpassword = Paswoord fout
+plugins.host.gigasize.freeaccount.pass = Paswoord
+plugins.host.gigasize.freeaccount.use = FreeAccount gebruiken
+plugins.host.gigasize.freeaccount.user = eMail
 plugins.host.imagefap.imageerror = Beeld foutmelding
 plugins.host.netload.try2SimultanDownloads = Probeer 2 Bestanden gelijktijdig te downloaden
 plugins.host.premium.account = Premium Account
@@ -1299,6 +1319,7 @@ plugins.optional.getter.port = Poort:
 plugins.optional.httpliveheaderscripter.action.end = Skripter verlaten
 plugins.optional.httpliveheaderscripter.action.start = Start Scripter
 plugins.optional.httpliveheaderscripter.gui.avefile = Opslaan
+plugins.optional.httpliveheaderscripter.gui.desc = XML-File
 plugins.optional.httpliveheaderscripter.gui.importff.message = Voeg hier de Firefox Liveheader Opname in
 plugins.optional.httpliveheaderscripter.gui.importff.title = Firefox Liveheader Opname importeren
 plugins.optional.httpliveheaderscripter.gui.menu.edit = Bewerken
@@ -1343,6 +1364,7 @@ plugins.optional.jdlowspeed.minspeed = Minimum snelheid voor een Download in kb/
 plugins.optional.jdlowspeed.name = Lage snelheid Detectie
 plugins.optional.jdlowspeed.rsonly = Enkel Raidshare bewaken
 plugins.optional.jdshutdown.name = JDShutdown
+plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.langfileeditor.addKey = Sleutel toevoegen
 plugins.optional.langfileeditor.adoptDefaults = Standard waarde(n) overnemen
 plugins.optional.langfileeditor.adoptDefaults.missing = Standard waarde(n) voor ontbrekende Inschrijvingen overnemen
@@ -1363,6 +1385,7 @@ plugins.optional.langfileeditor.editSelectedValues = Bewerk geselecteerde waarde
 plugins.optional.langfileeditor.editValue = Bewerk waarde
 plugins.optional.langfileeditor.entries = Inschrijvingen
 plugins.optional.langfileeditor.file = Bestand
+plugins.optional.langfileeditor.fileFilter = Taalbestanden(*.lng)
 plugins.optional.langfileeditor.firstKey = Eerste sleutel
 plugins.optional.langfileeditor.key = Sleutel
 plugins.optional.langfileeditor.keychart = Sleuteloverzicht
@@ -1374,6 +1397,7 @@ plugins.optional.langfileeditor.languageFileValue = Taalbestand waarde
 plugins.optional.langfileeditor.name = JDLangFileEditor
 plugins.optional.langfileeditor.new = Niewu
 plugins.optional.langfileeditor.ok = OK
+plugins.optional.langfileeditor.patternEntry = <Ingave komt overeen met patroon>
 plugins.optional.langfileeditor.pickMissingColor = Kies Kleur voor Ontbrekende Inschrijvingen
 plugins.optional.langfileeditor.pickOldColor = Kies Kleur voor Ontbrekende Inschrijvingen
 plugins.optional.langfileeditor.reload = Herladen
@@ -1421,6 +1445,7 @@ plugins.optional.streamsharingtool.action.validate.linksfound = Link(s) gevonden
 plugins.optional.streamsharingtool.gui.comment.defaultcomment = StreamingShare-DLC
 plugins.optional.streamsharingtool.gui.comment.question = Geef AUB jou gewenste DLC-commentaar in:
 plugins.optional.streamsharingtool.gui.comment.title = Geef DLC-Commentaar in:
+plugins.optional.streamsharingtool.gui.desc = StreamShraring-Bestand
 plugins.optional.streamsharingtool.gui.menu.exit = Exit
 plugins.optional.streamsharingtool.gui.menu.file = Bestand
 plugins.optional.streamsharingtool.gui.menu.help = Help
@@ -1455,6 +1480,7 @@ plugins.optional.trayIcon.speed4 = Snelheid 4:
 plugins.optional.trayIcon.speed5 = Snelheid 5:
 plugins.optional.trayIcon.startorstop = Start/Stop
 plugins.optional.trayIcon.stopafter = Stoppen na deze Download
+plugins.optional.trayIcon.tooltipp = Tooltipp aktief:
 plugins.optional.trayIcon.update = Update
 plugins.optional.webinterface.connections = Max. verbindingen
 plugins.optional.webinterface.https = Gebruik HTTPS
