--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -217,9 +217,9 @@ gui.config.gui.disabledialogs = Bestätigungsdialoge abschalten
 gui.config.gui.extended = Erweiterte Einstellungen
 gui.config.gui.gui = Benutzeroberfläche
 gui.config.gui.language = Sprache
-gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus überprüfen(Verfügbarkeitscheck)
+gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus überprüfen (Verfügbarkeitscheck)
 gui.config.gui.look.tab = Anzeige & Bedienung
-gui.config.gui.plaf = Style(Neustart nötig)
+gui.config.gui.plaf = Style (Neustart nötig)
 gui.config.gui.showSplash = Splashscreen beim Start zeigen
 gui.config.gui.soundTheme = Soundtheme
 gui.config.gui.theme = Theme
@@ -277,7 +277,7 @@ gui.config.liveHeader.script = HTTP Script
 gui.config.liveHeader.selectRouter = Router auswählen
 gui.config.liveHeader.user = Login User (->%%%user%%%)
 gui.config.liveHeader.waitForIP = Auf neue IP warten [sek]
-gui.config.liveHeader.waitTimeForIPCheck = Wartezeit bis zum ersten IP-Check[sek]
+gui.config.liveHeader.waitTimeForIPCheck = Wartezeit bis zum ersten IP-Check [sek]
 gui.config.liveHeader.warning.noCURLConvert = jDownloader konnte dieses CURL Script nicht konvertieren.
 gui.config.liveHeader.warning.notFound = jDownloader konnte ihre Routereinstellung nicht automatisch ermitteln.
 gui.config.liveHeader.warning.wizard = Die automatische Suche nach den Einstellungen kann einige Minuten in Anspruch nehmen. Bitte geben Sie vorher Ihre Router Logindaten ein. Jetzt ausführen?
@@ -434,7 +434,8 @@ gui.linkgrabber.menu.edit.removeOfflineAll = Fehlerhafte Links entfernen (Alle)
 gui.linkgrabber.menu.edit.removepackage = Paket verwerfen
 gui.linkgrabber.menu.edit.splitByHost = Pakete nach Host aufteilen
 gui.linkgrabber.menu.extras = Extras
-gui.linkgrabber.menu.extras.autopackage = Auto. Pakete
+gui.linkgrabber.menu.extras.autopackage = Automatische Paketzuteilung
+gui.linkgrabber.menu.extras.startafteradding = Automatischer Downloadstart
 gui.linkgrabber.menu.hostSelection = Host Auswahl
 gui.linkgrabber.menu.hostSelectionMore = Weitere Hoster
 gui.linkgrabber.menu.hostSelectionPackageOnly = Nur aktuelles Paket
@@ -455,7 +456,7 @@ gui.linkgrabber.packagetab.table.column.info = Info
 gui.linkgrabber.packagetab.table.column.link = Link
 gui.linkgrabber.packagetab.table.column.size = Größe
 gui.linkgrabber.packagetab.table.context.delete = Entfernen
-gui.linkgrabber.packagetab.table.context.newpackage = Neues Package
+gui.linkgrabber.packagetab.table.context.newpackage = Neues Paket
 gui.linkgrabber.password = Passwort?
 gui.linkgrabber.pos.bottom = Ende
 gui.linkgrabber.pos.top = Anfang
@@ -697,7 +698,7 @@ gui.textcomponent.context.selectall = Alles auswählen
 gui.textcomponent.context.selectall.acc = ctrl A
 gui.tooltip.statusbar.premium = Aus/An schalten des Premiumdownloads
 gui.tooltip.statusbar.simultan_downloads = Max. gleichzeitige Downloads
-gui.tooltip.statusbar.speedlimiter = Geschwindigkeitsbegrenzung festlegen(kb/s
+gui.tooltip.statusbar.speedlimiter = Geschwindigkeitsbegrenzung festlegen (kb/s)
 gui.treetable.header_1.tree = Pakete
 gui.treetable.header_2.files = Dateien
 gui.treetable.header_3.hoster = Anbieter
@@ -785,7 +786,7 @@ interaction.externExecute.parameter = Parameter (1 Parameter pro Zeile)
 interaction.externExecute.test = Programm aufrufen
 interaction.externExecute.toString = Externes Programm aufrufen
 interaction.externExecute.variables = Verfügbare Parameter
-interaction.externExecute.waitForTermination = Warten x Sekunden bis Befehl beendet ist[sek](-1 für unendlich)
+interaction.externExecute.waitForTermination = Warten x Sekunden bis Befehl beendet ist [sek] (-1 für unendlich)
 interaction.externreconnect.command = Befehl (absolute Pfade verwenden)
 interaction.externreconnect.executeIn = Ausführen in (Ordner der Anwendung)
 interaction.externreconnect.name = Externer Reconnect
